@@ -10,6 +10,7 @@ public enum WarningFlags {
     AssumesNauvisSolarRatio = 1 << 0,
     ReactorsNeighborsFromPrefs = 1 << 1,
     FuelUsageInputLimited = 1 << 2,
+    AsteroidCollectionNotModelled = 1 << 3,
 
     // Static errors
     EntityNotSpecified = 1 << 8,
@@ -144,6 +145,9 @@ internal class RecipeParameters(float recipeTime, float fuelUsagePerSecondPerBui
 
             if (entity.target.factorioType == "solar-panel") {
                 warningFlags |= WarningFlags.AssumesNauvisSolarRatio;
+            }
+            else if (entity.target.factorioType == "asteroid-collector") {
+                warningFlags |= WarningFlags.AsteroidCollectionNotModelled;
             }
 
             modules = default;
